get2gnow 00.00.eD.a00: multiple services & account support & way to much more.
get2gnow now supports multiple accounts on multiple services.  At least it does to a certain extent.  I still have some debugging to do & I know there are a lot of things that are now working yet.

This commit includes over 1wk of work, all while I've been extremely ill.  I've done a ton more than just add multiple account support though its my killer feature, for now ;-).

But I've also improved my tweet view & dm control 'window'.

I would love help w/debugging this commit as I get ready for get2gnow's 1st release.

Tomorrow I have tons of debugging to do...well maybe.  What ever I have to do I really hope I'll finish all, or at least most of my work before Monday.  My early next week is filled with Drs visits & I'll have next to no time to work on any thing.

There is so much in this way commit more than I can deailt here.  Well not reall, but its to much to write all about here & now.  Its so way past my bed time, I'm gonna pass out now.

BTW: if you do run this build please do.  I would recommend running './configure --enable-debug' and running get2gnow from './src/get2gnow'.  This will keep you previous version working and keeps your old settings. If all works well than feel free to run 'make install'.  Either way I'd love your help & feed back as I get ready to release my 1st version of get2gnow.

Damn this has been a long week & I have the bruises, code, & fever to proof it.  Please let me know if you feel it was worth it.

BTW, don't be surpised if this commit won't run at all.  I know there are bugs, but it may work wonderfully, so if you want multiple twitter, identi.ca, & etc accounts go a head & give this commit a shot...& def watch this tree.

Committed on: 2009-05-03 @ 03:00:29 AM

--- a/data/following-viewer.ui
+++ b/data/following-viewer.ui
@@ -4,11 +4,11 @@
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkListStore" id="following_store">
     <columns>
-      <!-- column-name gchararray -->
+      <!-- column-name user_name -->
       <column type="gchararray"/>
-      <!-- column-name gchararray1 -->
+      <!-- column-name user_nick -->
       <column type="gchararray"/>
-      <!-- column-name gpointer -->
+      <!-- column-name User -->
       <column type="gpointer"/>
     </columns>
   </object>
@@ -40,10 +40,14 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="model">following_store</property>
+                        <property name="reorderable">True</property>
                         <property name="search_column">1</property>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn1">
                             <property name="title">User</property>
+                            <property name="clickable">True</property>
+                            <property name="reorderable">True</property>
+                            <property name="sort_indicator">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="treeviewcolumn1-renderer1"/>
                               <attributes>
@@ -53,8 +57,22 @@
                           </object>
                         </child>
                         <child>
+                          <object class="GtkTreeViewColumn" id="online_service_treeviewcolumn">
+                            <property name="title">@</property>
+                            <property name="clickable">True</property>
+                            <property name="reorderable">True</property>
+                            <property name="sort_indicator">True</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn2">
                             <property name="title">Name</property>
+                            <property name="clickable">True</property>
+                            <property name="reorderable">True</property>
+                            <property name="sort_indicator">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="treeviewcolumn2-renderer1"/>
                               <attributes>
@@ -75,8 +93,8 @@
                     <property name="visible">True</property>
                     <property name="spacing">5</property>
                     <child>
-                      <object class="GtkButton" id="user_unfollow">
-                        <property name="label" translatable="yes">gtk-remove</property>
+                      <object class="GtkButton" id="refresh">
+                        <property name="label" translatable="yes">gtk-refresh</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
@@ -85,8 +103,22 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="padding">5</property>
                         <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="user_unfollow">
+                        <property name="label" translatable="yes">_Unfollow</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="image">unfollow_image</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="padding">5</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                     <child>
@@ -109,31 +141,33 @@
                     </child>
                     <child>
                       <object class="GtkButton" id="view_profile">
-                        <property name="label" translatable="yes">gtk-info</property>
+                        <property name="label" translatable="yes">_Profile</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="image">view_profile_image</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
                       </object>
                       <packing>
-                        <property name="position">3</property>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">4</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkButton" id="view_timeline">
-                        <property name="label" translatable="yes">gtk-home</property>
+                        <property name="label" translatable="yes">_Tweets/Updates</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">view_timeline_image</property>
+                        <property name="use_underline">True</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">5</property>
-                        <property name="pack_type">end</property>
-                        <property name="position">1</property>
+                        <property name="position">5</property>
                       </packing>
                     </child>
                   </object>
@@ -200,5 +234,17 @@
     <property name="visible">True</property>
     <property name="tooltip_text" translatable="yes">Block this user from being able to see your tweets or send you messages.</property>
     <property name="stock">gtk-stop</property>
+  </object>
+  <object class="GtkImage" id="unfollow_image">
+    <property name="visible">True</property>
+    <property name="stock">gtk-remove</property>
+  </object>
+  <object class="GtkImage" id="view_profile_image">
+    <property name="visible">True</property>
+    <property name="stock">gtk-info</property>
+  </object>
+  <object class="GtkImage" id="view_timeline_image">
+    <property name="visible">True</property>
+    <property name="stock">gtk-home</property>
   </object>
 </interface>
